--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.0.1/react-router-dom.js"></script>
+      <title> Acme Product Averages React </title>
   </head>
   <body>
+      <div id="root"></div>
   </body>
-  <script>
+  <script type="text/babel">
+
+  const { HashRouter, Switch, Link, Route, Redirect } = ReactRouterDOM;
+  const { render } = ReactDOM;
+  const { Component } = React;
+  const root = document.querySelector('#root');
   </script>
 </html>
