got something(hr) to show up

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   const { render } = ReactDOM;
   const { Component } = React;
   const root = document.querySelector('#root');
+  render(React.createElement('hr'), root);
   </script>
 </html>
