working on nav bar

--- a/index.html
+++ b/index.html
@@ -18,9 +18,31 @@
   const root = document.querySelector('#root');
   render(React.createElement('hr'), root);
 
+  const Home = ()=> {
+        return(
+        <h1>Home</h1>
+        );
+      }
+
+      const Products = ()=> {
+        return(
+        <h1>Products</h1>
+        );
+      }
+
+      const Nav = (props)=> {
+        const path = props.location.pathname;
+        return(
+          <nav>
+              <Link to='/home' className= {path === '/home' ? 'selected': ''}>Home</Link>
+              <Link to='/products' className= {path === '/products' ? 'selected': ''}>Products</Link>
+          </nav>
+        );
+      };
+
 
   // need to import products, offerings and companies
-  class App extends Component{
+  class App extends React.Component{
     constuctor(){
       super();
       this.state ={
