apparently I need to spell things correctly

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
 
   // need to import products, offerings and companies
-  class App extends Component{
-    constuctor(){
+  class App extends React.Component{
+    constructor(){
       super();
       this.state ={
         products : []
