style to the nav bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.0.1/react-router-dom.js"></script>
       <title> Acme Product Averages React </title>
-  </head>
+  <style>
+  nav {
+      display: flex;
+      justify-content: space-around;
+      padding: 1rem 0 0 0;
+    }
+
+  </style>
+    </head>
+
   <body>
       <div id="root"></div>
   <script type="text/babel">
