--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="en">
   <head>
+      <meta charset="UTF-8">
       <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
       <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
@@ -32,6 +33,8 @@
         );
       }
 
+//need to display, in order: product name, sugg price, Average price, lowest price and what company offers lowest
+//HR between each set
       const Products = ()=> {
         return(
         <h1>Products</h1>
