--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                   path="/products"
                   render={(props) => <Products data={ products } {...props}/>}
                 />
-                <Route exact path="/home" component={ Home } />
-                <Route exact path="/" component={ Products } />
+                <Route exact path="/" component={ Home } />
+                <Route path="/products" component={ Products } />
               </Switch>
             </HashRouter>
           );
